<resources>
    <string name="app_name">ChatApp</string>
    <string name="button_login">Logar</string>
    <string name="hint_edt_email">Digite seu e-mail:</string>
    <string name="hint_edt_status">Digite seu Status:</string>
    <string name="email">Email</string>
    <string name="hint_edt_password">Digite sua senha:</string>
    <string name="hint_edt_confirm_password">Confirme sua senha:</string>
    <string name="hint_edt_name">Digite o seu nome:</string>
    <string name="button_register">Registrar</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_settings">Configurações</string>
    <string name="action_quit">Sair</string>
    <string name="ajustes">Ajustes</string>
    <string name="salvar">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="add_image_descrp">Image Descrip</string>
    <string name="hint_name">Digite o seu nome</string>
    <string name="nome_do_individuo">Nome do individuo</string>
    <string name="mensagem">Mensagem</string>
    <string name="nome_do_usuario">Nome do usuario</string>
    <string name="mensagem_do_usuario">Mensagem do Usuario</string>
    <string name="button_back_content">button back</string>
    <string name="sendingmessage">sendingmessage</string>
    <string name="email_do_usuario">Email do usuário</string>
    <string name="status_do_usuario">Status do usuario</string>
    <string name="add_friend">Adicionar</string>
    <string name="contatos">Contatos</string>
    <string name="receiver_message">receiver message</string>
    <string name="sender_message">sender message</string>
    <string name="usuarios">Usuários</string>


</resources>